--- a/xmonad-config/build
+++ b/xmonad-config/build
@@ -1,6 +1,9 @@
 #!/bin/sh
-exec stack ghc -- \
-  --make xmonad.hs \
+repo="$HOME/repos/github/xmonad"
+cd $repo || { echo "could not enter source"; exit 1; }
+
+exec stack --stack-yaml "$repo/stack.yaml" ghc -- \
+  --make ~/.xmonad/xmonad.hs \
   -i \
   -ilib \
   -fforce-recomp \
