--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .stack-work
-xmonad-config/build
-xmonad-config/xmonad.hi
-xmonad-config/xmonad.hs
-xmonad-config/xmonad.state
-xmonad-config/xmonad.o
-xmonad-config/xmonad.errors
-xmonad-config/xmonad-*-linux
+config/build
+config/xmonad.hi
+config/xmonad.hs
+config/xmonad.state
+config/xmonad.o
+config/xmonad.errors
+config/xmonad-*-linux
+config/old_*
